--- a/home.css
+++ b/home.css
@@ -122,9 +122,12 @@ background-color:transparent }
   }
   
   h1 {
-    font-family: cursive;
-    color:#f3dacd;
+    font-family:Georgia;
+    text-shadow: 30px;
+    color:#cdd8f2;
+ 
     font-size: 40px;
+    
     margin-bottom: 30px;
   }
   
