--- a/home.css
+++ b/home.css
@@ -31,7 +31,7 @@ background-color:transparent }
     
     transition: all 0.3s ease-in-out;
     
-    background-color: #ffffff; }
+    background-color:  #053197; }
 
 .nav-menu { display: flex; justify-content: space-between; 
     
@@ -71,7 +71,7 @@ background-color:transparent }
     .nav-item { margin: 2.5rem 0; }
     
     .hamburger { 
-        color:aliceblue;
+        color: #054b97;
         
         display: block; cursor: pointer; }
 
