--- a/home.css
+++ b/home.css
@@ -140,11 +140,12 @@ background-color:transparent }
     margin-top: 10px;
     display: flex;
     flex-direction: column;
+ 
   }
   
   .blue-button {
     background-color: #054b97;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 15px 25px;
     font-size: 13px;
     border: none;
