--- a/home.css
+++ b/home.css
@@ -122,7 +122,7 @@ background-color:transparent }
   }
   
   h1 {
-    font-family: cursive;
+    font-family: serif;
     text-shadow: 30px;
     color:#cdd8f2;
  
